# langsfer

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/actions/poetry/: action.yml
.github/workflows/: main.yml  publish.yml
data/: README.md
data/focus/: fuzzy_token_overlap.json
data/wechsel/: bilingual_dictionary_alignment_matrix.npy  german_bilingual_dictionary.txt
notebooks/: CLPT_tutorial.ipynb  FOCUS_tutorial.ipynb  WECHSEL.ipynb  WECHSEL_tutorial.ipynb
src/langsfer/: alignment.py  constants.py  embeddings.py  high_level.py  initialization.py  similarity.py  utils.py  weight.py  weights.py
src/language_transfer/: __init__.py  alignment.py  constants.py  embeddings.py  high_level.py  initialization.py  token_overlap.py  utils.py  weight.py
tests/: conftest.py  test_token_overlap.py  test_weight.py  test_weights.py
tests/alignment/: test_bilinigual_dictionary.py
tests/embeddings/: test_embeddings.py
tests/token_overlap/: conftest.py  test_token_overlap.py
